# VM-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
doc/html/: annotated.html  classes.html  dir_2a0a1cb64d04eacc281255bbed715229.html  dir_2cbd3eec550f8e9e8c9c513c25618e78.html  dir_3cfe913bc2da7a7cb17d3192a524dad2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7e21a4a861b63e1cd16ca8aa87d34062.html  dir_e02cf472ac536284090853b60b10eece.html  files.html  functions.html  functions_func.html  index.html
doc/html/d2/d07/: class_v_box_1_1_i_host.html
doc/html/d2/d36/: class_v_box_1_1_i_event_source.html
doc/html/d2/dca/: class_v_box_1_1_i_machine.html
doc/html/d3/d79/: _i_machine_8h_source.html
doc/html/d4/d0a/: class_v_box_1_1_i_cloud_network.html
doc/html/d4/d1d/: class_v_box_1_1_i_d_h_c_p_server.html
doc/html/d4/d6f/: class_v_box_1_1_i_web_session_manager.html
doc/html/d4/dc8/: _i_unattended_8h_source.html
doc/html/d4/dcd/: class_v_box_1_1_i_system_properties.html
doc/html/d5/d53/: class_i_session.html
doc/html/d6/d64/: class_v_box_1_1_i_cloud_provider_manager.html
doc/html/d6/db9/: _v_box_8h_source.html
doc/html/d7/d28/: class_v_box_1_1_i_n_a_t_network.html
doc/html/d7/d36/: class_v_box_1_1_i_medium.html
doc/html/d7/d7b/: class_v_box_1_1_i_progress.html
doc/html/d7/d7f/: _i_n_a_t_network_8h_source.html
doc/html/d8/d9d/: _i_cloud_provider_manager_8h_source.html
doc/html/d9/d63/: class_v_box_1_1_i_web_session_manager-members.html
doc/html/d9/d8a/: _i_web_session_manager_8h_source.html
doc/html/d9/db9/: class_v_box_1_1_i_unattended.html
doc/html/d9/ddf/: class_v_box_1_1_i_guest_o_s_type.html
doc/html/d9/de6/: _i_session_8h_source.html
doc/html/da/d0c/: _i_guest_o_s_type_8h_source.html
doc/html/da/dca/: _vm_manager_8h_source.html
doc/html/da/df2/: _i_appliance_8h_source.html
doc/html/db/d5a/: _i_shared_folder_8h_source.html
doc/html/db/d6a/: class_v_box_1_1_i_shared_folder.html
doc/html/db/d93/: _i_virtual_box_8h_source.html
doc/html/db/da3/: _i_performance_collector_8h_source.html
doc/html/dc/d10/: class_v_box_1_1_i_appliance.html
doc/html/dc/d2e/: class_v_box_1_1_i_session.html
doc/html/dc/d2f/: _i_progress_8h_source.html
doc/html/dc/db4/: _i_host_8h_source.html
doc/html/dd/d69/: _i_d_h_c_p_server_8h_source.html
doc/html/dd/dbc/: _i_cloud_network_8h_source.html
doc/html/dd/df9/: _i_event_source_8h_source.html
doc/html/dd/dfe/: class_v_box_1_1_i_virtual_box-members.html
doc/html/de/d5c/: _i_medium_8h_source.html
doc/html/de/dab/: class_v_box_1_1_i_performance_collector.html
doc/html/de/dfc/: class_v_box_1_1_i_virtual_box.html
doc/html/df/d24/: _i_system_properties_8h_source.html
doc/html/df/d3a/: class_i_virtual_box-members.html
doc/html/df/d89/: _v_box_manager_8h_source.html
doc/html/df/de0/: class_i_virtual_box.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_12.js  variables_13.js  (+19 more)
doc/latex/: annotated.tex  refman.tex
doc/latex/d2/d07/: class_v_box_1_1_i_host.tex
doc/latex/d2/d36/: class_v_box_1_1_i_event_source.tex
doc/latex/d2/dca/: class_v_box_1_1_i_machine.tex
doc/latex/d4/d0a/: class_v_box_1_1_i_cloud_network.tex
doc/latex/d4/d1d/: class_v_box_1_1_i_d_h_c_p_server.tex
doc/latex/d4/d6f/: class_v_box_1_1_i_web_session_manager.tex
doc/latex/d4/dcd/: class_v_box_1_1_i_system_properties.tex
doc/latex/d5/d53/: class_i_session.tex
src/: CMakeLists.txt  main.cpp
src/vboxSoap/: CMakeLists.txt  soapClientLib.cpp  vboxBinding.nsmap
src/vboxmanager/: VBoxManager.cpp  VBoxManager.h
src/vmcore/virtualbox/soap/: IAppliance.cpp  IAppliance.h  IAudioAdapter.h  IBIOSSettings.h  IBandWidthGroup.h  IBandwidthControl.h  ICloudNetwork.h  ICloudProviderManager.cpp  ICloudProviderManager.h  IConsole.h  IDHCPServer.cpp  IDHCPServer.h  IEventSource.cpp  IEventSource.h  IGraphicsAdapter.h  IGuestOSType.cpp  IGuestOSType.h  IHost.cpp  IHost.h  IHostNetworkInterface.cpp  IHostNetworkInterface.h  IHostUSBDevice.cpp  IHostUSBDevice.h  IHostUSBDeviceFilter.cpp  IHostUSBDeviceFilter.h  IHostUpdate.cpp  IHostUpdate.h  IHostVideoInputDevice.cpp  IHostVideoInputDevice.h  IMachine.cpp  IMachine.h  IMedium.cpp  IMedium.h  IMediumAttachment.h  INATNetwork.cpp  INATNetwork.h  INetworkAdapter.h  IObject.cpp  IObject.h  IPCIDeviceAttachment.h  (+30 more)
src/vmcore/virtualbox/soap/exceptions/: connection_exception.h  logon_exception.h  soap_exception.h
src/vmmanager/: VmManager.cpp  VmManager.h
test/: CMakeLists.txt  test.cpp
test/vmcore/virtualbox/soap/: IMachineTest.h  IVirtualBoxTest.h  IWebSessionManagerTest.h  SOAPClientSingletonTest.h
(+12 files in other folders)
